<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Child activity control</string>
    <string name="app_tagline">Protect Your Child!</string>
    // 1 - общая версия. 2 - версия дизайна. 3 - функционально
    <string name="app_version">0.3.14b</string>

    // PasswordActivity
    <string name="edit_text_empty">You need to enter PIN first</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="prompt_password">Password</string>
    <string name="wrong_pin">PIN is wrong</string>
    <string name="prompt_password_confirm">Password (confirm)</string>
    <string name="think_pin_part_one">Think of a pin code to protect applications from entering outsiders. In the future, it will be used to enter the application. </string>
    <string name="think_pin_part_two">Remember the password, because it will not be possible to restore it!</string>
    <string name="action_sign_in">Sign in</string>


    // Notification
    <string name="notify_service_work">service is work</string>
    <string name="notify_service_not_work">service is\'t work</string>
    <string name="alert_perm_impMsg">Important message!</string>
    <string name="alert_perm_history">For work, the application needs access to the usage history. Without your permission, the application will not be able to work.</string>
    <string name="alert_perm_autostart_miui">Your phone is running under the control of the MIUI shell, so you must manually grant permission to autorun this application. Without your permission, the application will not be able to work correctly.</string>

    //Statistic Fragment
    <string name="start_chac">Start service</string>
    <string name="statistic_title">Statistic</string>
    <string name="select_device">Select device</string>
    <string name="select_time_period">Select statistic period</string>
    <string name="time_period_start">From :</string>
    <string name="time_period_end">To :</string>
    <string name="time_period_all">All time</string>
    <string name="time_period_custom">Custom</string>
    <string name="list_app_text">Used apps statistic</string>
    <string name="time_period_wrong">Time period is wrong</string>
    <string name="screen_work_statistic">Screen work statistic</string>
    <string name="app_info_empty">Not launch in that day</string>
    // NavigationDrawer
    <string name="nav_rate">Rate this app</string>
    <string name="nav_reset">Reset Results</string>

    //AboutAppFragment
    <string name="about_title">About</string>

    // AddDeviceFragment
    <string name="addDevice_title">Device\'s</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    //Other
    <string name="update_text">Update</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="hours_text">h.</string>
    <string name="minutes_text">m.</string>
    <string name="seconds_text">s.</string>
    <string name="title_activity_password">Sign in</string>
    <string name="ad_mob_id">ca-app-pub-7209919469454946~9409925084</string>
    <string name="ad_mob_activity_block_id">ca-app-pub-7209919469454946/9767225727</string>
    <string name="test_ad_mob_activity_block_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reset_all_data_msg">Are you sure you want to delete all the data of the work of your applications?</string>


</resources>
