<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appsx.childrensactivitycontrol.activity.PasswordActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/think_pin_part_one"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/colorRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/think_pin_part_two"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/pa_pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlue" />

                <EditText
                    android:id="@+id/pa_pass_confirm_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_confirm"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlue" />

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/pa_login_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_background"
                    android:text="@string/confirm_text"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>
