<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBorderGrey"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:orientation="horizontal"
        android:elevation="8dp"
        android:padding="8dp">

        <TextView
            android:paddingStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="start"
            android:text="@string/start_chac"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/sf_start_chac_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="false"
            android:thumbTint="@color/colorWhite"
            tools:ignore="NewApi" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="2dp">

            <LinearLayout
                android:animateLayoutChanges="true"
                android:id="@+id/sf_time_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/item_container"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/select_time_period"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/sf_select_time_period_more"
                                android:layout_gravity="end"
                                android:background="@drawable/ic_more_horiz_black_48dp"
                                android:layout_width="32dp"
                                android:layout_height="32dp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/colorBorderGrey" />

                        <TextView
                            android:id="@+id/sf_time_period_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_period_all" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    tools:visibility="visible"
                    android:id="@+id/sf_time_custom_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ad_time_p_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/item_container"
                            android:orientation="horizontal"
                            android:padding="4dp">

                            <TextView
                                android:id="@+id/ad_time_p_from_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/time_period_start" />

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:background="@drawable/ic_date_range_black_48dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ad_time_p_to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/item_container"
                            android:orientation="horizontal"
                            android:padding="4dp">

                            <TextView
                                android:id="@+id/ad_time_p_to_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/time_period_end" />

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:background="@drawable/ic_date_range_black_48dp"></ImageView>
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:layout_marginTop="8dp"
                        android:layout_gravity="end"
                        android:id="@+id/ad_time_update_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/update_text"
                        android:background="@drawable/button_background"
                        android:padding="8dp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/item_container"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_app_text"
                        android:textSize="18sp" />

                    <ProgressBar
                        android:id="@+id/sf_loadapss_progress"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="end"
                        android:indeterminateTint="@color/colorBlue" />
                </RelativeLayout>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorBorderGrey" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/apps_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>