<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.appsx.childrensactivitycontrol.activity.PasswordActivity">


    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:background="@mipmap/ic_launcher"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingStart="8dp"
                    android:text="beta"
                    android:textColor="@color/colorRed" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/pal_pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="numberPassword"
                    android:textColor="@color/colorBlue"
                    android:maxLines="1"
                    android:singleLine="true" />
                <Button
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:id="@+id/pal_login_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/confirm_text"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ap_progress_border"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBorderGrey">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>
